<resources>
    <string name="comment">Comment</string>
    <string name="movementMode">Movement Mode</string>
    <string name="customer_type">Type</string>
    <string name="customer_description_pl">Outlet Description&#8230;</string>
    <string name="customer_description">Description</string>
    <string name="owner_number">Owner No:</string>
    <string name="outletName">Outlet Name</string>
    <string name="outletname">Customer Name:</string>
    <string name="decisionMakerName">Decision Maker</string>
    <string name="decisionMaker">Decision Maker:</string>
    <string name="outletType">Outlet Type</string>
    <string name="OutletType">Outlet Type:</string>
    <string name="last4Orders">Orders</string>
    <string name="Orders">Orders:</string>
    <string name="contactPersonNo">Contact Person Number</string>
    <string name="contactPNo">Contact Number:</string>
    <string name="contactPersonName">Contact Person Name</string>
    <string name="contactPName">Contact Name:</string>
    <string name="Geolocation">Location:</string>
    <string name="search_location_here">Search location&#8230;</string>
    <string name="all_customers">All Customer</string>
    <string name="map">Map</string>
    <string name="journeyPlan">Journey Plan</string>
    <string name="version">v 1.0.0</string>
    <string name="new_sales_lbl">New Sales Record Entry</string>
    <string name="routes">Routes</string>
    <string name="stockRequest">Request Stock</string>
    <string name="reports">Report</string>
    <string name="endTrip">End Trip</string>
    <string name="startTrip">Start Trip</string>
    <string name="home_notificatins">Notifications</string>
    <string name="contact_person_info">Contact Person Info</string>
    <string name="save">Save</string>
    <string name="postal_address_pl">Postal Address</string>
    <string name="postal_address">Postal Address</string>
    <string name="mobile_number_pl">Mobile Number&#8230;</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_pl">Email&#8230;</string>
    <string name="owner_name_pl">Name&#8230;</string>
    <string name="outlet_name_pl">Outlet Name&#8230;</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="owner">Owner Info</string>
    <string name="route_lbl">Route</string>
    <string name="choose_outlet">Choose Outlet</string>
    <string name="outlet_type">Outlet Type</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="new_customer">New Customer Details Entry</string>
    <string name="location">Location:</string>
    <string name="cont_person_name">Cont. Name:</string>
    <string name="cont_phone">Cont. Phone:</string>
    <string name="owner_name">Owner Name:</string>
    <string name="outlet">Outlet Type:</string>
    <string name="search">Search:</string>
    <string name="route">Route:</string>
    <string name="today">Today</string>
    <string name="_new">New</string>
    <string name="refresh">Data Refresh</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="change">Change</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirmation Password</string>
    <string name="confirm_password_pl">Confirmation Password&#8230;</string>
    <string name="new_password">New Password</string>
    <string name="new_password_pl">New Password&#8230;</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_pl">Current Password&#8230;</string>
    <string name="credentials">Credentials</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="username">Username</string>
    <string name="username_pl">Username&#8230;</string>
    <string name="password">Password</string>
    <string name="password_pl">Password&#8230;</string>
    <string name="login">Login</string>
    <string name="sfa">Sales Force Automation</string>
    <string name="app_name">iSFA</string>
    <string name="impax">Impax</string>
    <string name="welcome_intruction">...your process automation partner</string>

    <array name="outlet_type">
        <item>Supermarket</item>
        <item>Mall</item>
        <item>Shop</item>
    </array>

    <array name="customer_type">
        <item>Cash</item>
        <item>Credit</item>
    </array>

    <array name="movement_arrays">
        <item>Van</item>
        <item>Foot</item>
    </array>

    <array name="product_code">
        <item>A120</item>
        <item>A121</item>
        <item>A122</item>
        <item>A123</item>
    </array>

    <array name="product_name">
        <item>Sugar</item>
        <item>Rice</item>
        <item>Tea</item>
    </array>

    <array name="uom">
        <item>pks</item>
        <item>box</item>
        <item>dzn</item>
        <item>kg</item>
    </array>

<array name="onSite">
    <item>YES</item>
    <item>NO</item>
</array>
    <array name="asset_condition">
        <item>Good</item>
        <item>Faulty</item>
        <item>Broken</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comment:</string>
    <string name="OdometerStart">Odometer Start:</string>
    <string name="ordermeter_pl">Odometer Start&#8230;</string>
    <string name="reNo">Reg. Number</string>
    <string name="registrationNo_pl">Registration Number&#8230;</string>
    <string name="choose_movement_mode">Select Your Movement Mode</string>
    <string name="odometerEnd">Odometer End</string>
    <string name="OdometerEnd">Odometer End:</string>
    <string name="end">End Trip</string>
    <string name="StartTime">Start Time</string>
    <string name="startTime">Start Time:</string>
    <string name="call_Objectives">Call Objectives</string>
    <string name="stock_Take">Stock Take</string>
    <string name="generate_Order">Generate Order</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="invoicing">Invoice and Print</string>
    <string name="payment">Payment Collection</string>
    <string name="merchandising">Merchandising</string>
    <string name="asset_Tracking">Asset Tracking</string>
    <string name="complete_Call">Complete Call</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="productcode">Product Code:</string>
    <string name="ProductCode">Product Code</string>
    <string name="productname">Product Name:</string>
    <string name="ProductName">Product Name</string>
    <string name="uom">UOM:</string>
    <string name="UoM">UOM</string>
    <string name="qty">QTY:</string>
    <string name="Qty">QTY</string>
    <string name="price">Price:</string>
    <string name="Price">Price</string>
    <string name="amount">Amount:</string>
    <string name="Amount">Amount</string>
    <string name="OrderNo">Order No&#8230;</string>
    <string name="customerCode">Customer Code</string>
    <string name="cost">Cost:</string>
    <string name="Cost">Cost</string>
    <string name="orderid">Order Id:</string>
    <string name="customercode">Customer Code:</string>
    <string name="orderdate">Order Date:</string>
    <string name="OrderDate">Order Date</string>
    <string name="productCode_prompt">Select Product Code</string>
    <string name="productName_Mode">Select the Product Name</string>
    <string name="uom_mode">Select the appropriate Unit of Measure</string>
    <string name="title_activity_sales_order__lines">SalesOrder_Lines</string>
    <string name="orderlineno">OrderLine No:</string>
    <string name="OrderLineNo">OrderLine No</string>
    <string name="Lines">Lines</string>
    <string name="deliveryDate">Expected Delivery Date</string>
    <string name="deliver">Deliver</string>
    <string name="orderno">Order No</string>
    <string name="deliverAll">Deliver All</string>
    <string name="Count">Count</string>
    <string name="item">Item</string>
    <string name="status">Status</string>
    <string name="totalAmount">Total Amount</string>
    <string name="receipt">Receipt No</string>
    <string name="amountPaid">Amount Paid</string>
    <string name="balance">Balance</string>
    <string name="stockChild">Stock</string>
    <string name="count">Count</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="AStock">Stock</string>
    <string name="expired">Expired</string>
    <string name="damaged">Damaged</string>
    <string name="Totals">Totals </string>
    <string name="notification_id">ID</string>
    <string name="notification_subejct">Notification Subject</string>
    <string name="notification_content">Notification Content</string>
    <string name="asserName">Asset Name</string>
    <string name="onsite">On Site</string>
    <string name="condition">Condition</string>
    <string name="lastservicedate">Last Service Date</string>
    <string name="nextservicedate">Next Service Date</string>
    <string name="reason">Reason</string>
    <string name="onSite">Is it On Site</string>
</resources>
