<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/generateOrder_txtProductCode"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/ProductCode" />

    <TextView
        android:id="@+id/generateOrder_txtQty"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/Qty" />

    <TextView
        android:id="@+id/generateOrder_txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/Price" />

    <TextView
        android:id="@+id/generateOrder_txtOrderNo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/OrderNo" />

    <TextView
        android:id="@+id/generateOrder_txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/Amount" />
</LinearLayout>