<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsProductCode"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="@string/productcode"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/orderLineDetails_txtProductCode"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-3dp"
        android:fontFamily="sans-serif"
        android:hint="@string/ProductCode"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsProductName"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="@string/productname"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/orderLinesDetails_txtProductName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/ProductName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsDescription"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="@string/uom"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDescription"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/UoM"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLineDetails_txtDetailsqty"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/qty" />

    <TextView
        android:id="@+id/orderLinesDetails_txtQty"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Qty"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsprice"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/orderLinesDetails_txtUnitPrice"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Price"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsamount"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/orderLinesDetails_txtAmount"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/Amount"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/orderLinesDetails_txtDetailsorderDate"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/orderdate" />

    <TextView
        android:id="@+id/orderLinesDetails_txtOrderDate"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/OrderDate"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />


</LinearLayout>