<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/deliverOrders_txtProductCode"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/ProductCode" />


    <TextView
        android:id="@+id/deliverOrders_txtProductName"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/ProductName" />

    <TextView
        android:id="@+id/deliverOrders_txtQty"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/Qty" />


    <TextView
        android:id="@+id/deliverOrders_txtAmount"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@color/columns"
        android:padding="10dp"
        android:text="@string/Amount" />

</LinearLayout>