<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/neworder_txtOutletName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/outlet_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/neworder_lblOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/orderid" />

    <EditText
        android:id="@+id/neworder_txtOrderId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/neworder_lblOrderId"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif"
        android:hint="@string/OrderNo"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/neworder_lblOrderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/orderdate" />

    <TextView
        android:id="@+id/neworder_txtOrderDate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/neworder_lblOrderDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="serif"
        android:hint="@string/OrderDate"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="290dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_btnOk"
            android:layout_width="153dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/order_btnCancel"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>