<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <TextView
        android:id="@+id/orderDetails_txtDetailsAmount"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="19dp"
        android:fontFamily="serif"
        android:text="@string/amount"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/orderDetails_txtAmount"
        android:layout_width="199dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/orderDetails_txtDetailsAmount"
        android:fontFamily="sans-serif"
        android:text="@string/Amount"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />


    <Button
        android:id="@+id/generate_btnLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:text="@string/Lines" />
</RelativeLayout>